--- a/index.css
+++ b/index.css
@@ -141,7 +141,34 @@ img{
 .negritas{
     font-weight: 700;
 }
+/*
+==========Estilos secccion Beneficios2============= 
+*/
+.beneficios2{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+section.beneficios2 .logo-container{
+    width: 12%;
+    height: 20%;
+    position: relative;
+    margin-bottom: 50px;
+    top: 110px;
+    align-items: center;
+}
+.logo-container .textAdicional{
+    position: relative;
+    top: 60px;
+    color: #ffbd59;
+}
+.beneficios2 img{
+    
+    width: 90%;
+    object-fit: contain;
+   
 
+}
 /*
 ==========Estilos secccion info============= 
 */
@@ -349,13 +376,18 @@ section.Reseñas .tarjetas{
 }
 
 section.Reseñas .tarjetas .tarjetaReseña{
-    display: flex;
-    flex-direction: column;
-    height: 50%;
-    padding: 100px;
+    display: flex !important;
+    flex-direction: column !important;
+    height: 100%;
+    min-height: 100px;
+    min-width: 100px;
+    width: 40%;
+    padding: 30px;
     background-color: white;
     box-shadow: 2px 2px 5px 3px rgba(0, 0, 0, 0.2);
-    max-height: 200px;
+    max-height: 1000px;
+    max-width: 500px;
+
 }
 
 /*
